# capturing-glob

./: .travis.yml  Cargo.toml  README.md  vagga.yaml
src/: entry.rs  lib.rs
tests/: glob-std.rs
